<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TranslateApp</string>
    <string name="action_settings">Settings</string>
    <string name="submit_button">Submit</string>
    <string name="enter_a_word">Enter a word to translate to get started</string>
    <string name="share_button">Share</string>
    <string name="history_button">History</string>
    <string name="tcp_submit_button">TCP Submit</string>
    <string name="http_submit_button">HTTP Submit</string>
    <string name="title_activity_history">History Page</string>
    <string name="delete_history">Delete History</string>
    <string name="delete_history_dialog">Delete this translate record?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
